--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -8,8 +8,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [Linux]
-        # platform: [ ubuntu-latest ]
+        # platform: [Linux]
+        platform: [ubuntu-latest]
     runs-on: ${{ matrix.platform }}
     if: |
       ! startsWith(github.head_ref, 'sh-') &&
