--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -13,8 +13,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [Linux]
-        # platform: [ ubuntu-latest ]
+        # platform: [Linux]
+        platform: [ubuntu-latest]
     if: "! contains(github.event.head_commit.message, '[skip ci]')"
     runs-on: ${{ matrix.platform }}
     steps:
