--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -4,16 +4,13 @@ on:
     branches:
       - master
   workflow_dispatch:
-    branches:
-      - master
-
 jobs:
   check-versions:
     strategy:
       fail-fast: false
       matrix:
-        platform: [Linux]
-        # platform: [ ubuntu-latest ]
+        # platform: [Linux]
+        platform: [ubuntu-latest]
     runs-on: ${{ matrix.platform }}
     if: |
       ! contains(github.event.head_commit.message, '[skip ci]')
