--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "eslint": "^8.30.0",
-    "eslint-config-next": "13.0.7",
+    "eslint-config-next": "^13.1.1",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-jest": "^27.1.7",
     "jest": "^29.3.1",
